[package]
name = "daily_programmer_386"
version = "0.1.0"
authors = ["Mark Blum <mark.n.blum@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.11.0"
threadpool = "1.8.1"
num_cpus = "1.13.0"
