[package]
name = "daily_programmer_386"
version = "0.1.0"
authors = ["Mark Blum <mark.n.blum@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = { version = "1.11.0", optional = true }
num-bigint = { version = "0.4", optional = true }

loom = { version = "0.4", optional = true }

threadpool = "1.8.1"
num_cpus = "1.13.0"

[dev-dependencies]
criterion = "0.3"

# [target.'cfg(loom)'.dependencies]
# loom = "0.4"

[[bench]]
name = "single_threaded"
harness = false

[features]
default = ["rug"]
# default = ["num-bigint"]
# default = ["i128"]
i128 = []
